# raichu

./: .gitignore  Makefile  README.md  package-lock.json  package.json
config/: local.yaml
service/: Cargo.toml  build.rs  hue.proto
service/src/: configuration.rs  lib.rs  main.rs  phillips.rs
src/app/: HueServiceClientPb.ts  hue_pb.d.ts  hue_pb.js  layout.tsx  page.tsx
src/components/: mode-toggle.tsx  refresh-button.tsx  room-component.tsx  room-list-component.tsx  theme-provider.tsx
src/lib/: utils.ts
