[package]
name = "raichu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "raichu"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10"
tonic-web = "0.10"
prost = "0.12"
prost-types = "0.12"
config = "0.13.4"


[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["json", "rustls-tls"]

[build-dependencies]
tonic-build = "0.10"
